--- a/Bluetooth/Readme
+++ b/Bluetooth/Readme
@@ -1,1 +1,4 @@
+skectch_oct13a -> Exemplo de utilização de HM10 como slave. Código apto para conversa através da Serial.
+skectch_oct13c -> Código incompleto. Apresenta configuração do mestre e escravo. Também apto a conversa com a Serial.
 
+Aplicativo Android para teste do Bluetooth LE (BLE Scanner).
